--- a/better-bids-web/views/index.ejs
+++ b/better-bids-web/views/index.ejs
@@ -192,6 +192,7 @@ tr td {
     <ul>
         <li><a href="#R">Ranking</a></li>
         <li><a href="#T">Types of Risks</a></li>
+        <li><a href="#C">Contact Us</a></li>
     </ul>
 </nav>
 
@@ -395,5 +396,36 @@ tr td {
       considering various factors such as market risk, financial risk, liquidity, and others. 
       A higher score indicates greater risk exposure, while a lower score reflects safer investments.</h3>
   </div>
+
+  <div>
+    <h1 id="C" style="text-align: center; padding-top: 70px;";>Contact Us</h1> 
+    <img style="float: left; padding-left: 100px; padding-right: 100px; padding-top: 70px;" 
+    src="ABnew.png" width="400" height="400"/>
+    <h1
+          style="padding-top: 100px; margin-left:45px; margin-top: 0px; line-height: 1; font-size: 50px;">
+          Avishikta Bagchi
+          </h1>
+          <h2 style="margin-bottom: 100px; padding-right: 100px; font-size: 24px;">
+             Hello! I am a junior in Computer Science at UT Dallas with a passion for 
+             data engineering and cybersecurity.<br>
+             Please contact me for internships and research opportunities. <br>
+             Email: avishiktabagchi26@gmail.com <br>
+             Linkedin: www.linkedin.com/in/avishikta-bagchi
+          </h2>
+    
+      <img style="float: left; padding-left: 100px; padding-right: 100px; padding-top: 70px;" 
+          src="aw-high-resolution-logo.png" width="400" height="400"/>
+          <h1
+                style="padding-top: 100px; margin-left:45px; margin-top: 0px; line-height: 1; font-size: 50px;">
+                Alexis Whitsitt
+                </h1>
+                <h2 style="margin-bottom: 100px; padding-right: 100px; font-size: 24px;">
+                   Hi! I am a junior in Computer Science at UT Dallas with a passion for 
+                   continuous learning and developing projects.<br>
+                   Email: acwhitsitt@gmail.com <br>
+                </h2>
+  
+  </div>
 </body>
+
 </html>
